fix(theme-tokens.css): ajout de nouvelles variables de gap pour améliorer l'espacement

--- a/assets/css/theme-tokens.css
+++ b/assets/css/theme-tokens.css
@@ -46,6 +46,9 @@
   --text-xl: clamp(var(--text-20), 1.0054rem + 1.087vw, var(--text-30));
   --text-2xl: clamp(var(--text-24), 1.2065rem + 1.3043vw, var(--text-36));
   --text-3xl: clamp(var(--text-30), 1.4348rem + 1.9565vw, var(--text-48));
+  --gap-m: clamp(var(--spacing-16), 0.6087rem + 1.7391vw, var(--spacing-32));
+  --gap-l: clamp(var(--spacing-32), 1.7955rem + 0.9091vw, var(--spacing-40));
+  --gap-xl: clamp(var(--spacing-32), 0.7727rem + 5.4545vw, var(--spacing-80));
 
   /* prettier-ignore */
   --spacing-m: clamp(var(--spacing-16), 0.6522rem + 1.7391vw, var(--spacing-32));
